test/custom/inference/bad/typeclass_predicate_inside.mlt
class H 'a { h : 'a }

let ['a] x = fun (f : 'a) -> let ['b] [H 'a] y = h in y
